# ff-smt-bench-gen

./: Cargo.toml  LICENSE  README.md
bench_gen/contrib/ff/bench_gen/: .gitignore  Cargo.toml
bench_gen/contrib/ff/bench_gen/src/: main.rs
scripts/: gen.zsh
src/: main.rs  smt.rs
