[package]
name = "bench_gen"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@cs.stanford.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circ = { git = "https://github.com/circify/circ.git", branch = "master", features = ["smt", "r1cs", "zok"]}
circ_fields = { git = "https://github.com/circify/circ.git", branch = "master"}
circ_opt = { git = "https://github.com/circify/circ.git", branch = "master"}
rand = "0.8"
rand_distr = "0.4"
structopt = "0.3"
env_logger = "0.8"
rug = "1.11"
